--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,3 +1,17 @@
+# Copyright 2020 HM Revenue & Customs
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 environment: local
 
 local {
@@ -7,9 +21,9 @@ local {
       port: 9949
       productionRoute = "/auth-login-stub"
     }
-    pay-frontend {
-      port = 9056
-      productionRoute = "/pay"
+    import-voluntary-disclosure {
+      port = 7950
+      productionRoute = "/import-voluntary-disclosure"
     }
   }
 }
@@ -33,19 +47,19 @@ zap-automation-config {
 
   # Required field. This is the seed url for the spider scan. It needs to be the URL of the start page of
   # your application (not just localhost:port).
-  testUrl = "http://localhost:9056/pay"
+  testUrl = "http://localhost:7950/import-voluntary-disclosure"
 
   # A context is a construct in Zap that limits the scope of any attacks run to a particular domain
   # This would usually be the base url of your service - eg http://localhost:xxxx.*
-  contextBaseUrlRegex = "http://localhost:9056.*"
+  contextBaseUrlRegex = "http://localhost:7950.*"
 
   #These are the urls that the zap-automation library will use to filter out the alerts that are shown to you.
   alertUrlsToReport = [
-    "http://localhost:9056"
+    "http://localhost:7950"
   ]
   #An example to ignore alerts
   alertsToIgnore = [
-    {cweid: "16", url: "http://localhost:9056/pay/language/.*"}
+    {cweid: "16", url: "http://localhost:7950/pay/language/.*"}
   ]
 
   # Fails test only if the reported alert's severity is above or same as the provided failureThreshold.
