--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -29,8 +29,9 @@ local {
 }
 
 qa {
+  proxyConnectionString: ${?SQUID_PROXY_CONNECTION_STRING}
   services {
-    host: ${?QA_HOST}
+    host: "https://www.qa.tax.service.gov.uk"
   }
 }
 
